spade-tests/src/snapshots/spade_tests__typeinference__useful_error_if_indexing_backward_array.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Index target must be an array, got &mut [bool; 10]
  ┌─ testinput:2:5
  │
2 │     x[0]
  │     ^ Expected array


